--- a/index.html
+++ b/index.html
@@ -67,11 +67,7 @@
       >
 
       and hosted on
-      <a
-        href="https://weather-application-from-rachel.netlify.app/"
-        target="_blank"
-        >Netlify</a
-      >
+      <a href="https://blanc-ensemble.netlify.app/" target="_blank">Netlify</a>
     </footer>
     <script src="script.js"></script>
   </body>
